--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,20 @@
 	<name>maven-devops-1</name>
 	<url>http://www.devopsdemo.com</url>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+				  <source>1.5</source>
+				  <target>1.5</target>
+				</configuration>
+			</plugin>
+      	</plugins>
+  </build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
